tests/rosetta/out/Fortran/camel-case-and-snake-case.error
gfortran: exit status 1
/tmp/camel-case-and-snake-case.f90:149:7:

  149 |       s = samples(i0)
      |       1
Error: Symbol ‘s’ at (1) has no IMPLICIT type
/tmp/camel-case-and-snake-case.f90:88:8:

   88 |       ch = s((i)+1:(i + 1))
      |        1
Error: Symbol ‘ch’ at (1) has no IMPLICIT type
/tmp/camel-case-and-snake-case.f90:58:8:

   58 |       ch = s((i)+1:(i + 1))
      |        1
Error: Symbol ‘ch’ at (1) has no IMPLICIT type
/tmp/camel-case-and-snake-case.f90:146:28:

  146 |     samples = (/'snakeCase','snake_case','snake-case','snake case','snake CASE','snake.case','variable_10_case','variable10Case','ɛrgo rE tHis','hurry-up-joe!','c://my-docs/happy_Flag-Day/12.doc',' spaces '/)
      |                            1
Error: Different CHARACTER lengths (9/10) in array constructor at (1)
/tmp/camel-case-and-snake-case.f90:24:30:

   24 |     do while ((((start < size(s)) .and. s((start)+1:(start + 1))) == ' '))
      |                              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/camel-case-and-snake-case.f90:27:15:

   27 |     end = size(s)
      |               1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/camel-case-and-snake-case.f90:28:35:

   28 |     do while ((((end > start) .and. s(((end - 1))+1:end)) == ' '))
      |                                   1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/CHARACTER(*)
/tmp/camel-case-and-snake-case.f90:83:4:

   83 |     s = trimSpace(s)
      |    1
Error: Dummy argument ‘s’ with INTENT(IN) in variable definition context (assignment) at (1)
/tmp/camel-case-and-snake-case.f90:90:33:

   90 |         if (((.not. prevUnd .and. 0) > 0)) then
      |                                 1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/camel-case-and-snake-case.f90:98:39:

   98 |         if (((.not. prevUnd .and. size(out)) > 0)) then
      |                                       1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/camel-case-and-snake-case.f90:87:24:

   87 |     do while ((i < size(s)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/camel-case-and-snake-case.f90:118:30:

  118 |     do while ((((start < size(out)) .and. out((start)+1:(start + 1))) == '_'))
      |                              1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/camel-case-and-snake-case.f90:121:15:

  121 |     end = size(out)
      |               1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/camel-case-and-snake-case.f90:122:35:

  122 |     do while ((((end > start) .and. out(((end - 1))+1:end)) == '_'))
      |                                   1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/CHARACTER(*)
/tmp/camel-case-and-snake-case.f90:130:10:

  130 |       c = out((j)+1:(j + 1))
      |          1
Error: Cannot convert CHARACTER(*) to INTEGER(4) at (1)
/tmp/camel-case-and-snake-case.f90:131:11:

  131 |       if ((c == '_')) then
      |           1
Error: Operands of comparison operator ‘==’ at (1) are INTEGER(4)/CHARACTER(1)
/tmp/camel-case-and-snake-case.f90:133:17:

  133 |           res = (res + c)
      |                 1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/INTEGER(4)
/tmp/camel-case-and-snake-case.f90:137:15:

  137 |         res = (res + c)
      |               1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/INTEGER(4)
/tmp/camel-case-and-snake-case.f90:129:24:

  129 |     do while ((j < size(out)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/camel-case-and-snake-case.f90:53:4:

   53 |     s = trimSpace(s)
      |    1
Error: Dummy argument ‘s’ with INTENT(IN) in variable definition context (assignment) at (1)
/tmp/camel-case-and-snake-case.f90:57:24:

   57 |     do while ((i < size(s)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/camel-case-and-snake-case.f90:43:18:

   43 |     n = (w - size(s))
      |                  1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/camel-case-and-snake-case.f90:48:11:

   48 |     res = (res + s)
      |           1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
/tmp/camel-case-and-snake-case.f90:36:29:

   36 |     res = (((ch >= 'A') .and. ch) <= 'Z')
      |                             1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/CHARACTER(100)
