tests/rosetta/out/Fortran/camel-case-and-snake-case.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program camel_case_and_snake_case
  implicit none
    integer :: start
    integer :: end
    character(len=100) :: res
    integer :: n
    character(len=100) :: out
    logical :: up
    integer :: i
    logical :: prevUnd
    integer :: j
    logical :: lastUnd
      integer :: c
    integer, dimension(12) :: samples
    integer :: i0
    integer :: i1
  call main()
  
  contains
  recursive character(len=100) function trimSpace(s) result(res)
    character(len=100), intent(in) :: s
    start = 0
    do while ((((start < size(s)) .and. s((start)+1:(start + 1))) == ' '))
      start = (start + 1)
    end do
    end = size(s)
    do while ((((end > start) .and. s(((end - 1))+1:end)) == ' '))
      end = (end - 1)
    end do
    res = s((start)+1:end)
    return
  end function trimSpace
  recursive logical function isUpper(ch) result(res)
    character(len=100), intent(in) :: ch
    res = (((ch >= 'A') .and. ch) <= 'Z')
    return
  end function isUpper
  recursive character(len=100) function padLeft(s,w) result(res)
    character(len=100), intent(in) :: s
    integer, intent(in) :: w
    res = ''
    n = (w - size(s))
    do while ((n > 0))
      res = res // ' '
      n = (n - 1)
    end do
    res = (res + s)
    return
  end function padLeft
  recursive character(len=100) function snakeToCamel(s) result(res)
    character(len=100), intent(in) :: s
    s = trimSpace(s)
    out = ''
    up = .false.
    i = 0
    do while ((i < size(s)))
      ch = s((i)+1:(i + 1))
      if ((((((((ch == '_') .or. ch) == '-') .or. ch) == ' ') .or. ch) == '.')) then
        up = .true.
        i = (i + 1)
        cycle
      end if
      if ((i == 0)) then
        out = (out + lower(ch))
        up = .false.
        i = (i + 1)
        cycle
      end if
      if (up) then
        out = (out + upper(ch))
        up = .false.
      else
        out = (out + ch)
      end if
      i = (i + 1)
    end do
    res = out
    return
  end function snakeToCamel
  recursive character(len=100) function camelToSnake(s) result(res)
    character(len=100), intent(in) :: s
    s = trimSpace(s)
    out = ''
    prevUnd = .false.
    i = 0
    do while ((i < size(s)))
      ch = s((i)+1:(i + 1))
      if ((((((ch == ' ') .or. ch) == '-') .or. ch) == '.')) then
        if (((.not. prevUnd .and. 0) > 0)) then
          out = out // '_'
          prevUnd = .true.
        end if
        i = (i + 1)
        cycle
      end if
      if ((ch == '_')) then
        if (((.not. prevUnd .and. size(out)) > 0)) then
          out = out // '_'
          prevUnd = .true.
        end if
        i = (i + 1)
        cycle
      end if
      if (isUpper(ch)) then
        if (((i > 0) .and. (.not. prevUnd))) then
          out = out // '_'
        end if
        out = (out + lower(ch))
        prevUnd = .false.
      else
        out = (out + lower(ch))
        prevUnd = .false.
      end if
      i = (i + 1)
    end do
    start = 0
    do while ((((start < size(out)) .and. out((start)+1:(start + 1))) == '_'))
      start = (start + 1)
    end do
    end = size(out)
    do while ((((end > start) .and. out(((end - 1))+1:end)) == '_'))
      end = (end - 1)
    end do
    out = out((start)+1:end)
    res = ''
    j = 0
    lastUnd = .false.
    do while ((j < size(out)))
      c = out((j)+1:(j + 1))
      if ((c == '_')) then
        if (.not. lastUnd) then
          res = (res + c)
        end if
        lastUnd = .true.
      else
        res = (res + c)
        lastUnd = .false.
      end if
      j = (j + 1)
    end do
    res = res
    return
  end function camelToSnake
  recursive subroutine main()
    samples = (/'snakeCase','snake_case','snake-case','snake case','snake CASE','snake.case','variable_10_case','variable10Case','ɛrgo rE tHis','hurry-up-joe!','c://my-docs/happy_Flag-Day/12.doc',' spaces '/)
    print *, '=== To snake_case ==='
    do i0 = 1, size(samples)
      s = samples(i0)
      print *, trim(padLeft(s,34) // ' => ') // camelToSnake(s)
    end do
    print *, ''
    print *, '=== To camelCase ==='
    do i1 = 1, size(samples)
      s = samples(i1)
      print *, trim(padLeft(s,34) // ' => ') // snakeToCamel(s)
    end do
  end subroutine main
end program camel_case_and_snake_case
